[tool.poetry]
name = "radope"
version = "0.1.0"
description = "An iterative implementation of the Ramer-Douglas-Peucker algorithm"
authors = ["Steffen Ohrendorf <steffen.ohrendorf@gmx.de>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/stohrendorf/radope"
"Bug Tracker" = "https://github.com/stohrendorf/radope/issues"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
flake8-black = "*"
flake8-isort = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"
